# RsOracle

./: readme.md  run.sh
aggregator/: Cargo.toml
aggregator/src/: main.rs
aggregator/src/tcp_utils/: mod.rs
client/: Cargo.toml
client/src/: main.rs
client/src/data_models/: mod.rs
client/src/utils/: mod.rs
